+ Added login/logout widget

--- a/Public/apps/Logger/Templates/logout_widget.html
+++ b/Public/apps/Logger/Templates/logout_widget.html
@@ -1,9 +1,6 @@
-<div class="icon_container">
-    <i class="fa fa-user fa-2x"></i>
-</div>
 <div class="widget_content delogger">
+    You're logged in as <%= SmartBlocks.current_user.get("name") %>
     <button class="pure-button">
-        <i class="fa fa-eject fa-2x"></i>
-        Log out
+        Log out <i class="fa fa-sign-out"></i>
     </button>
 </div>
