--- a/Public/apps/ContactManagement/Style/user_search.less
+++ b/Public/apps/ContactManagement/Style/user_search.less
@@ -1,3 +1,22 @@
 .user_search {
+  padding: 20px;
 
+  background: rgba(255, 255, 255, 0.3);
+  margin: 10px;
+  position: relative;
+
+  .user_search_input {
+    padding: 5px;
+    border: none;
+    background-color: rgba(217, 217, 217, 0.50);
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    height: 25px;
+  }
+
+  .user_search_results {
+    margin-top: 25px;
+  }
 }
