--- a/Public/apps/ContactManagement/Templates/contact_management.html
+++ b/Public/apps/ContactManagement/Templates/contact_management.html
@@ -1,9 +1,14 @@
-<div class="user_search_container">
-
+<div class="header">
+    <h2><a href="history.back();" class="fa fa-chevron-left clickable-icon"></a> Contact Management</h2>
 </div>
-<div class="contact_list_container">
+<div class="pure-g-r contact_management_content">
+    <div class="user_search_container pure-u-1-4">
 
-</div>
-<div class="contact_page_container">
+    </div>
+    <div class="contact_list_container pure-u-1-4">
 
+    </div>
+    <div class="contact_page_container pure-u-2-4">
+
+    </div>
 </div>
