--- a/Public/apps/ContactManagement/Templates/user_search.html
+++ b/Public/apps/ContactManagement/Templates/user_search.html
@@ -1,4 +1,4 @@
-<input type="text" class="user_search_input"/>
+<input type="text" class="user_search_input" placeholder="Search for users"/>
 <ul class="user_search_results">
 
 </ul>
