--- a/Public/apps/ContactManagement/Templates/contact_thumb.html
+++ b/Public/apps/ContactManagement/Templates/contact_thumb.html
@@ -2,7 +2,8 @@
 <a>
     <%= user.get('name') %>
 </a>
+<span class="more_info"></span>
 <div class="actions">
-   
+
 </div>
 <div class="clearer"></div>
