+ added brief responsive layout

--- a/Public/apps/ContactManagement/Style/user_search.less
+++ b/Public/apps/ContactManagement/Style/user_search.less
@@ -1,7 +1,7 @@
 .user_search {
   padding: 20px;
 
-  background: rgba(255, 255, 255, 0.3);
+  //  background: rgba(255, 255, 255, 0.3);
   margin: 10px;
   position: relative;
 
