--- a/Public/apps/ContactManagement/Style/contact_management.less
+++ b/Public/apps/ContactManagement/Style/contact_management.less
@@ -14,6 +14,9 @@
       > div {
         min-height: 500px;
         max-height: 100%;
+        background: white;
+        margin: 10px;
+        padding: 20px;
       }
     }
 
@@ -23,13 +26,22 @@
     .contact_list_container {
 
       @import "contact_list";
+
     }
     .user_search_container {
 
       @import "user_search";
+
     }
     .contact_page_container {
       @import "contact_page";
+
+    }
+    @media (max-width: 600px) {
+      .contact_page_container, .user_search_container, .contact_list_container {
+        width: 100%;
+        height: auto;
+      }
     }
   }
 
