+ Added controls on thumbs and pending control

--- a/Public/apps/ContactManagement/Style/user_search.less
+++ b/Public/apps/ContactManagement/Style/user_search.less
@@ -1,5 +1,5 @@
 .user_search {
-  padding: 20px;
+  //  padding: 20px;
 
   //  background: rgba(255, 255, 255, 0.3);
   margin: 10px;
@@ -17,6 +17,8 @@
   }
 
   .user_search_results {
-    margin-top: 25px;
+    //    margin-top: 25px;
+    position: relative;
+    top: 38px;
   }
 }
