--- a/Public/apps/ContactManagement/Style/contact_management.less
+++ b/Public/apps/ContactManagement/Style/contact_management.less
@@ -16,7 +16,7 @@
         max-height: 100%;
         background: white;
         margin: 10px;
-        padding: 20px;
+        //        padding: 20px;
       }
     }
 
