--- a/Public/apps/ContactManagement/Style/contact_thumb.less
+++ b/Public/apps/ContactManagement/Style/contact_thumb.less
@@ -1,6 +1,20 @@
 .contact_thumb {
+  height: 40px;
+  margin-bottom: 3px;
+  line-height: 40px;
+  background: rgba(55, 178, 204, 0.5);
+  padding: 5px;
+  &:hover {
+    background: rgba(55, 178, 204, 0.9);
+  }
+
   .actions {
     float: right;
-    font-size: 23px;
+    .clickable-icon {
+      color: rgba(255, 255, 255, 0.5);
+      &:hover {
+        color: rgba(255, 255, 255, 1);
+      }
+    }
   }
 }
