--- a/Public/apps/ContactManagement/Templates/contact_management.html
+++ b/Public/apps/ContactManagement/Templates/contact_management.html
@@ -1,5 +1,6 @@
 <div class="header">
-    <h2><a href="history.back();" class="fa fa-chevron-left clickable-icon"></a> Contact Management</h2>
+    <h2><a href="javascript:void(0);" onclick="history.back();" class="fa fa-chevron-left clickable-icon"></a> Contact
+        Management</h2>
 </div>
 <div class="pure-g-r contact_management_content">
     <div class="user_search_container pure-u-1-4">
