--- a/Public/apps/ContactManagement/Templates/contact_management.html
+++ b/Public/apps/ContactManagement/Templates/contact_management.html
@@ -2,14 +2,16 @@
     <h2><a href="javascript:void(0);" onclick="history.back();" class="fa fa-chevron-left clickable-icon"></a> Contact
         Management</h2>
 </div>
-<div class="pure-g-r contact_management_content">
-    <div class="user_search_container pure-u-1-4">
+<div class="contact_management_content">
+    <div class="contacts">
+        <div class="user_search_container">
 
-    </div>
-    <div class="contact_list_container pure-u-1-4">
+        </div>
+        <div class="contact_list_container">
 
+        </div>
     </div>
-    <div class="contact_page_container pure-u-1-2">
+    <div class="contact_page_container">
 
     </div>
 </div>
