--- a/Public/apps/ContactManagement/Style/contact_thumb.less
+++ b/Public/apps/ContactManagement/Style/contact_thumb.less
@@ -1,12 +1,9 @@
 .contact_thumb {
   height: 40px;
-  margin-bottom: 3px;
+  margin-top: 3px;
   line-height: 40px;
   background: rgba(55, 178, 204, 0.5);
   padding: 5px;
-  &:hover {
-    background: rgba(55, 178, 204, 0.9);
-  }
 
   .actions {
     float: right;
@@ -15,6 +12,14 @@
       &:hover {
         color: rgba(255, 255, 255, 1);
       }
+    }
+  }
+
+  &.clickable {
+    cursor: pointer;
+
+    &:hover {
+      background: rgba(55, 178, 204, 0.9);
     }
   }
 }
