+ Small style changes

--- a/Public/apps/Logger/Templates/logger_widget.html
+++ b/Public/apps/Logger/Templates/logger_widget.html
@@ -2,7 +2,7 @@
     <div class="field">
         <label>
             Email :
-            <input type="text" class="login_input" placeholder="Enter your email"/>
+            <input type="text" class="login_input" placeholder="Enter your name"/>
         </label>
     </div>
     <div class="field">
