--- a/Public/apps/Logger/Style/main.less
+++ b/Public/apps/Logger/Style/main.less
@@ -2,11 +2,15 @@
 
   .field {
     clear: right;
+    label {
+      width: 100%;
+    }
     input {
       border: none;
       padding: 5px;
       background: #d7d7d7;
       float: right;
+      width: 120px;
     }
   }
 
