+Added left menu button

--- a/Public/apps/ContactManagement/Templates/contact_management.html
+++ b/Public/apps/ContactManagement/Templates/contact_management.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <h2><a href="javascript:void(0);" onclick="history.back();" class="fa fa-chevron-left clickable-icon"></a> Contact
+    <h2><a href="javascript:void(0);" onclick="" class="show_left_menu_button"><i class="fa  fa-caret-square-o-right "></i></a> Contact
         Management</h2>
 </div>
 <div class="contact_management_content">
