--- a/Public/apps/ContactManagement/Style/contact_management.less
+++ b/Public/apps/ContactManagement/Style/contact_management.less
@@ -4,6 +4,12 @@
     height: 50px;
     line-height: 50px;
     background: rgba(255, 255, 255, 0.5);
+    h2 {
+      height: 50px;
+      line-height: 50px;
+      margin: 0;
+      padding: 0;
+    }
   }
 
   .contact_management_content {
